# voicegraph-autonomous-agent

./: .dvcignore  .env.example  .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.orchestrator  Dockerfile.propensity  Dockerfile.voiceworker  Dockerfile.yandexgpt  LICENSE  Makefile  README.md  docker-compose.dev.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: latency_test.py  mock_vllm.py
db/: init.sql
docs/: adr.md  ai_ml_specifications.md  architecture.md  data_api_contracts.md  epics_user_stories.md  iac_cicd_observability.md  phase_0_step_1.md  phase_0_step_2.md  phase_0_step_3.md  phase_1_step_1.md  phase_1_step_2.md  phase_1_step_3.md  phase_2_step_1.md  phase_2_step_2.md  phase_3_step_1.md  phase_3_step_2.md  phase_3_step_3.md  phase_4_step_1.md  phase_4_step_2.md  phase_5_step_1.md  phase_5_step_2.md  phase_6_step_1.md  phase_6_step_2.md  phase_6_step_3.md  phases.md  requirements.md  review.md  specification.md  structure.md  testing_strategy.md
docs/api/: propensity_openapi.yaml
docs/prompts/: voicegraph_v1.0.yaml
infra/asterisk/: upload_to_minio.sh
infra/asterisk/config/: extensions.conf  pjsip.conf
infra/bridge/: Cargo.toml  Dockerfile.dev
infra/bridge/src/: main.rs
infra/k8s/: livekit-worker-hpa.yaml  qdrant-statefulset.yaml  redis-statefulset.yaml  vllm-deployment.yaml
infra/observability/: alerting_rules.yml  prometheus.yml
infra/observability/grafana_dashboards/: voicegraph_realtime_ops.json
src/data_pipeline/: gx_setup.py  pipeline.py
src/integrations/: circuit_breaker.py  composio_tools.py  crm_tools.py  retry_worker.py  telegram_bot.py
src/memory/: context_builder.py  manager.py  qdrant_setup.py
src/orchestrator/: api.py  bandit_optimizer.py  checkpointer.py  graph_builder.py  nodes.py  state.py
src/pii_sanitizer/: recognizers.py  service.py
src/propensity_model/: config.py  features.py  train.py
src/propensity_model/inference_api/: cache_manager.py  main.py
src/reflection/: event_processor.py  llm_analyzer.py  prompts.py  schemas.py  weekly_aggregator.py
src/reporting/: data_aggregator.py  delivery_service.py  pdf_generator.py
src/voice_worker/: main.py
src/voice_worker/emotion/: detector.py  pipeline.py
src/voice_worker/llm/: vllm_plugin.py
src/voice_worker/stt/: faster_whisper_plugin.py
src/voice_worker/tts/: silero_plugin.py
src/voicegraph/: config.py  schemas.py
src/voicegraph/observability/: audit.py  metrics.py  metrics_integration.py  tracing.py
src/yandexgpt_gateway/: main.py  models.py
tests/: conftest.py  test_config.py  test_emotion.py  test_integrations.py  test_memory.py  test_orchestrator.py  test_pii_sanitizer.py  test_pipeline.py  test_propensity.py  test_reporting.py  test_schemas.py
