[project]
name = "voicegraph"
version = "1.0.0"
description = "VoiceGraph: Autonomous Predictive Outbound Agent"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "great-expectations>=1.1.0",
    "dvc[s3]>=3.50.0",
    "pyarrow>=16.1.0",
    "presidio-analyzer>=2.2.35",
    "presidio-anonymizer>=2.2.35",
    "spacy>=3.7.4",
    "livekit-agents>=0.10.0",
    "livekit-api>=0.8.0",
    "faster-whisper>=1.0.3",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "httpx>=0.27.0",
    "msgspec>=0.18.0",
    "numpy>=1.26.4",
    "opensmile>=2.5.0",
    "phonenumbers>=8.13.13",
    "python-dotenv>=1.0.1",
    "librosa>=0.10.1",
    "scikit-learn>=1.4.2",
    "soundfile>=0.12.1",
    "scipy>=1.13.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.4.0",
    "catboost>=1.2.9",
    "featuretools>=1.30.0",
    "imbalanced-learn>=0.12.0",
    "mlflow>=2.18.0",
    "shap>=0.44.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "redis>=5.0.0",
    "qdrant-client>=1.9.0",
    "asyncpg>=0.29.0",
    "composio-langchain>=0.5.20",
    "mem0ai>=0.1.20",
    "instructor>=1.3.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "prometheus-client>=0.20.0",
    "croniter>=2.0.0",
    "structlog>=24.1.0",
    "weasyprint>=61.2",
    "python-telegram-bot>=20.7",
    "aiosmtplib>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
orchestrator = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "redis>=5.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
voiceworker = [
    "livekit-agents>=0.10.0",
    "livekit-api>=0.8.0",
    "faster-whisper>=1.0.3",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "opensmile>=2.5.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
]
propensity = [
    "catboost>=1.2.9",
    "featuretools>=1.30.0",
    "scikit-learn>=1.4.2",
    "imbalanced-learn>=0.12.0",
    "shap>=0.44.0",
    "joblib>=1.4.0",
    "mlflow>=2.18.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"
exclude = [
    "build/",
    "\\.eggs/",
    "\\.git/",
    "\\.mypy_cache/",
    "\\.ruff_cache/",
    "\\.pytest_cache/",
    "__pycache__/",
    "\\.venv/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
