[package]
name = "voicegraph-webrtc-sip-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
webrtc = "0.9.0"
rsip = "0.4.0"
rsip-tokio = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
